--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,23 @@
-@(message: String)
+@(persons: List[Person], peopleForm: Form[String])
 
 @main("Welcome to Play 2.0") {
     
-    <h1>@message</h1>
-	<a href="#" class="btn">Click here</a>    
+    <h1>@persons.size people</h1>
+
+
+    <ul>
+    	@persons.map { person =>
+    		<li>
+    			@person.name
+    		</li>
+    	}	
+    </ul>
+
+    <h2>Add a person</h2>
+
+    @form(routes.Application.newPerson) {
+    	@inputText(peopleForm("name"))
+    	<input type="submit" value="Create">
+    }
+	
 }
