--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,12 +5,11 @@
 <html>
     <head>
         <title>@title</title>
+        <link rel='stylesheet' media='screen' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap-responsive.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.png")">
-        <script src="@routes.Assets.at("js/jquery-1.7.1.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("js/bootstrap.min.js")" type="text/javascript"></script>
+        <script type='text/javascript' src='@routes.Assets.at("javascripts/jquery.min.js")'>
+        </script>
     </head>
     <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
