--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,7 @@
 @(persons: List[Person], peopleForm: Form[Person])
 
 @import helper._
+@import helper.twitterBootstrap._
 
 @main("Welcome to Play 2.0") {
     
