moved creation of dinner to seperate page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(dinners: List[Dinner], peopleForm: Form[Dinner])
+@(dinners: List[Dinner])
 
 @import helper._
 @import helper.FieldConstructor 
@@ -19,19 +19,6 @@
     	}	
     </ul>
     </p>
-    
-    <h2>Add a dinner</h2>
 
-    @helper.form(routes.Application.newDinner, 'class -> "well form-horizontal", 'id -> "FISK") {
-    	@helper.inputText(peopleForm("dinner_time"), '_label -> "Dinner time")
-        @helper.inputText(peopleForm("order_latest_time"), '_label -> "Latest order time")
-        @helper.inputText(peopleForm("name"), '_label -> "Name")
-    	@helper.inputText(peopleForm("description"), '_label -> "Description")
-    	@helper.inputText(peopleForm("order_link"), '_label -> "Order link")
-        @helper.checkbox(peopleForm("open"), '_label -> "Open for orders", '_help -> "")
-        <div class="controls">
-        	<input type="submit" value="Create" class="btn btn-primary">
-       </div>
-    }
-
+    <a href="@routes.Application.newDinner">New dinner</a>
 }
