--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,12 +21,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Feed Me!</a>
+          <a class="brand" href="/">Feed Me!</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
