--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,6 @@
-@(dinners: List[Dinner], orders: List[Order])
+@(dinners: List[Dinner], allOrders: Map[ObjectId, List[Order]], orderForm: Form[Order])
 
 @import helper._
-@import helper.FieldConstructor 
 @import helper.twitterBootstrap2._ 
 @import java.util.Date
 
@@ -15,26 +14,38 @@
                 @if(dinner.dinner_time.getDate() == new Date().getDate()){
                     <h3>@dinner.name kl @dinner.dinner_time.format("HH:mm")</h3>
                     <p>@dinner.description</p>
-                    <p>Bestil inden @dinner.order_latest_time.format("HH:mm") fra <a target="_blank" href="@dinner.restaurant_link">@dinner.restaurant_name</a></p>
+                    <p>@dinner.id Bestil inden @dinner.order_latest_time.format("HH:mm") fra <a target="_blank" href="@dinner.restaurant_link">@dinner.restaurant_name</a></p>
                 } else {
-                    <h3>@dinner.name kl @dinner.dinner_time.format("dd/MM-yyyy HH:mm")</h3>
+                    <h3>@dinner.name @dinner.dinner_time.format("dd/MM-yyyy HH:mm")</h3>
                     <p>@dinner.description</p>
                     <p>Bestil inden @dinner.order_latest_time.format("dd/MM-yyyy HH:mm") fra <a target="_blank" href="@dinner.restaurant_link">@dinner.restaurant_name</a></p>
                 }
-                <table>
-                    <tr>
-                        <th>Navn</th>
-                        <th>Nr</th>
-                        <th>Kommentar</th>
-                    </tr>
-                    @orders.map { order =>
+                
+                @if(!allOrders.get(dinner.id).isEmpty && allOrders.get(dinner.id).get.size > 0){
+                    <table class="table table-bordered table-striped responsive-utilities">
+                        <tr>
+                            <th>Navn</th>
+                            <th>Nr</th>
+                            <th>Kommentar</th>
+                        </tr>
+
+                    @allOrders.get(dinner.id).get.map { order =>
                         <tr>
                             <td>@order.name</td>
                             <td>@order.food_number</td>
                             <td>@order.comment</td>
                         </tr>
                     }
-                </table>	
+                    </table>
+                }
+                @helper.form(routes.Application.addOrder(dinner.id), 'class -> "form-inline"){
+                    @helper.inputText(orderForm("name"), '_label -> "Dit navn")
+                    @helper.inputText(orderForm("food_number"), '_label -> "Nr")
+                    @helper.inputText(orderForm("comment"), '_label -> "Kommentar")
+                    <div class="controls">
+                        <input type="submit" value="Bestil" class="btn btn-primary">
+                    </div>
+                }
     		</div>
     	}
         <a class="btn btn-primary" href="@routes.DinnerController.newDinner">Ny bestilling</a>	
