Added possibility to delete orders and dinners

--- a/app/views/dinner.scala.html
+++ b/app/views/dinner.scala.html
@@ -10,8 +10,8 @@
     
     <h1>Add new dinner</h1>
 
-    @helper.form(routes.DinnerController.addDinner, 'class -> "well form-horizontal", 'id -> "FISK") {
-    	@helper.inputText(peopleForm("dinner_time"), '_label -> "Spise tidspunkt")
+    @helper.form(routes.DinnerController.addDinner, 'class -> "well form-horizontal") {
+    	@helper.inputText(peopleForm("dinner_time"), '_label -> "Spise tidspunkt", 'autofocus -> "autofocus")
         @helper.inputText(peopleForm("order_latest_time"), '_label -> "Seneste bestilling")
         @helper.inputText(peopleForm("name"), '_label -> "Navn")
     	@helper.inputText(peopleForm("description"), '_label -> "Beskrivelse")
