--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,12 +6,12 @@
     	@dinners.map { dinner =>
     		@indexDinner(dinner, allOrders.get(dinner.id).get, orderForm)
     	}
-        <a class="btn btn-primary" href="@routes.DinnerController.add">Ny bestilling</a>	
+        <a class="btn btn-primary" href="@routes.DinnerController.create">Ny bestilling</a>	
     } else {
         <div class="hero-unit">
             <h1>Ingen bestillinger</h1>
             <p>Der er pt ingen bestillinger åbne. Er du sulten så opret en nu!</p>
-            <a class="btn btn-primary btn-large" href="@routes.DinnerController.add">
+            <a class="btn btn-primary btn-large" href="@routes.DinnerController.create">
                 Ny bestilling
             </a>
         </div>
