--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,10 +6,12 @@
     <head>
         <title>@title</title>
         <link rel='stylesheet' media='screen' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/responsive.min.css")" />
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.min.css")" />
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.png")">
         <script type='text/javascript' src='@routes.Assets.at("javascripts/jquery.min.js")'>
+        </script>
+        <script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.min.js")'>
         </script>
     </head>
     <body>
