--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,19 +1,23 @@
-@(dinners: List[Dinner], allOrders: Map[ObjectId, List[Order]], orderForm: Form[Order])
+@(dinners: List[Dinner])
+
+@import java.util.Date
 
 @main("Feed Me!") {
     
     @if(dinners.size > 0) {
     	@dinners.map { dinner =>
-    		@indexDinner(dinner, allOrders.get(dinner.id).get, orderForm)
+    		<div class="well">
+                <h3>@dinner.name @dinner.dinner_time.format("dd/MM-yyyy HH:mm")</h3>
+                <p>@dinner.description</p>
+                <p>Bestil inden @dinner.order_latest_time.format("dd/MM-yyyy HH:mm") fra <a target="_blank" href="@dinner.restaurant_link">@dinner.restaurant_name</a></p>
+                
+                <a href="@routes.DinnerController.show(dinner.id)">Vis</a>
+            </div>
     	}
-        <a class="btn btn-primary" href="@routes.DinnerController.create">Ny bestilling</a>	
     } else {
         <div class="hero-unit">
             <h1>Ingen bestillinger</h1>
             <p>Der er pt ingen bestillinger åbne. Er du sulten så opret en nu!</p>
-            <a class="btn btn-primary btn-large" href="@routes.DinnerController.create">
-                Ny bestilling
-            </a>
         </div>
     }
     
