--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,17 @@
-body{
-	padding-top: 60px;
+@media (min-width: 979px) {
+	body{
+		padding-top: 60px;
+	}
 }
 
 .dinnericons{
-	position: relative;
-	top: -14px;
-	right: -12px;
 	float: right;
+}
+
+.right {float: right;}
+.left {float: left;}
+.orderbutton {
+	display: block;
+	margin: 0 auto 20px auto;
+	max-width: 300px;
 }
