--- a/app/views/showDinner.scala.html
+++ b/app/views/showDinner.scala.html
@@ -1,4 +1,4 @@
-@(dinner: Dinner, orders: List[Order], orderForm: Form[Order])
+@(dinner: Dinner, orders:List[Order])
 
 @import java.util.Date
 @import helper._
@@ -24,10 +24,11 @@
     	<dd><a target="_blank" href="@dinner.restaurant_link">@dinner.restaurant_name</a></dd>
     </dl>
 
-    <a href="#" class="btn btn-primary btn-large orderbutton">Bestil mad</a>
+    @if(dinner.order_latest_time.after(new Date())){
+	    <a href="@routes.OrderController.create(dinner.id)" class="btn btn-primary btn-large orderbutton">Bestil mad</a>
+    }
 
-    @if(dinner.open){
-        
+    @if(dinner.open && !orders.isEmpty){
         <table class="table table-bordered table-striped responsive-utilities">
             <tr>
                 <th>Navn</th>
@@ -41,17 +42,10 @@
                 <td>@order.name</td>
                 <td>@order.food_name</td>
                 <td>@order.comment</td>
-                <td><a href='@routes.DinnerController.deleteOrder(order.id)'><i class="icon-remove"></a></td>
+                <td><a href='@routes.OrderController.delete(order.id)'><i class="icon-remove"></a></td>
             </tr>
         }
         </table>
-        
-        @helper.form(routes.DinnerController.addOrder(dinner.id), 'class -> "form-inline"){
-       		@helper.inputText(orderForm("name"), '_label -> "Dit navn", 'autofocus -> "autofocus")
-            @helper.inputText(orderForm("food_name"), '_label -> "Mad navn/nr") 
-            @helper.inputText(orderForm("comment"), '_label -> "Kommentar") 
-            <input type='submit' value='Bestil' class='btn btn-primary'> 
-        }
     }
     <a href="@routes.Application.index" class="btn">Back</a>
 }
