moved create dinner button down from top bar

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,3 +1,6 @@
+@import "utils/_reset.less";
+@import "utils/_layout.less";
+
 @media (min-width: 979px) {
 	body{
 		padding-top: 60px;
@@ -7,11 +10,18 @@
 .dinnericons{
 	float: right;
 }
-
+.new_dinner_button {
+	margin-bottom: 20px;
+	float: right;
+}
 .right {float: right;}
 .left {float: left;}
 .orderbutton {
 	display: block;
 	margin: 0 auto 20px auto;
 	max-width: 300px;
+}
+
+.dinnerbox {
+	clear: both;
 }
