added admin section + minor ui tweaks

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -18,16 +18,18 @@ body {
 .page_heading1 {
 	text-align: center;
 	font-size: 4em;
+	line-height: 1em;
 }
 
 .page_description {
 	text-align: center;
 	font-size: 2em;
+	line-height: 2em;
 }
 
 .dl-horizontal {
 	width: 400px;
-	margin: 0 auto;
+	margin: 20px auto 40px auto;
 	border: 1px solid #ddd;
 	padding: 10px;
 	background-color: #f5f5f5;	
@@ -70,6 +72,7 @@ body {
 
 	.page_description {
 		font-size: 1.5em;
+		line-height: 1.5em;
 	}
 
 	.dl-horizontal {
