--- a/app/assets/stylesheets/utils/_infobox.less
+++ b/app/assets/stylesheets/utils/_infobox.less
@@ -5,10 +5,10 @@
 	padding: 1em;
 	margin-bottom: 20px;
 	border: 1px solid lightgrey;
+	text-align: center;
 }
 
 .infobox_intro {
-	text-align: center;
 	font-size: 0.8em;
 }
 
@@ -16,19 +16,18 @@
 	font-size: 1.5em;
 	line-height: 1em;
 	margin-bottom: 0.5em;
-	text-align: center;
 }
 
 .infobox_paragraph {
 	font-size: 1em;
 	line-height: 1em;
-	text-align: center;
 }
 
-.infobox_buttons {
-	position: absolute;
-	top: 10px;
-	right: 10px;
+.infobox_action {
+	font-size: 24px;
+	font-weight: 200;
+	padding: 19px 24px;
+	margin: 0 auto;
 }
 
 @media (max-width: 479px) {
