--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,6 +20,9 @@
       <div class="navbar-inner">
         <div class="container">
             <a class="brand" href="/">Feed Me!</a>
+            <ul class="nav">
+              <li><a href="/admin">Admin</a></li>
+            </ul>
         </div>
       </div>
     </div>
