Added ordermode and ordercount

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,8 +1,13 @@
 @import "utils/_reset.less";
 @import "utils/_layout.less";
 @import "utils/_infobox.less";
+@import "utils/_ordermode.less";
 body {
 	padding-bottom: 20px;
+}
+.ordertable_num_orders{
+	font-weight: bold;
+	font-size: 1.2em;
 }
 .new_dinner_button {
 	margin-bottom: 20px;
