--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,6 @@
       @content
 
     </div> <!-- /container -->
-        
+    <script type='text/javascript' src='@routes.Assets.at("javascripts/ordermode.js")'></script>    
     </body>
 </html>
